--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
-    "puppeteer": "^2.0.0"
+    "node-fetch": "^2.6.0",
+    "puppeteer": "^2.0.0",
+    "request": "^2.88.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^6.8.0"
+  }
 }
