--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
+    "encoding": "^0.1.12",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0",
     "request": "^2.88.0"
